# pathrs

./: .gitignore  Cargo.toml  README.md  TODO
pathrs/: Cargo.toml
pathrs-app/: Cargo.toml  build.rs
pathrs-app/src/: application.rs  camera.rs  camera_controller.rs  main.rs
pathrs-app/src/renderer/: compute_pipeline.rs  mod.rs
pathrs-app/src/shaders/: quad.wgsl
pathrs-renderer/: Cargo.toml
pathrs-renderer/src/: camera.rs  geometry.rs  lib.rs  material.rs  metrics.rs  scene.rs  simd.rs
pathrs-renderer/src/renderer/: cpu_renderer.rs  mod.rs
pathrs-shader/: Cargo.toml
pathrs-shader/src/: lib.rs
pathrs-shared/: Cargo.toml
pathrs-shared/src/: lib.rs
pathrs/src/: app.rs  camera.rs  main.rs  material.rs  ppm.rs  renderer.rs  scene.rs  simd.rs  ui.rs
src/: application.rs  camera.rs  main.rs  shader.wgsl  state.rs
src/renderer/: compute_pipeline.rs  mod.rs  render_pipeline.rs
src/shaders/: compute.wgsl  quad.wgsl
