[package]
name = "pathrs"
version = "0.1.0"
authors = ["Finn Vos <finn@fvos.de>"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.15"
sdl2 = { version = "0.34.5", features = ["raw-window-handle"] }
wgpu = "0.8.1"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18.0"
