[package]
name = "pathrs"
version = "0.1.0"
authors = ["Finn Vos <finn@fvos.de>"]
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.14"
env_logger = "0.9"
futures = "0.3.15"
winit = "0.25"
wgpu = "0.10"
game-loop = { version = "0.8", features = ["window"] }
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18.0"
