[package]
name = "pathrs"
version = "0.1.0"
authors = ["Finn Vos <finn@fvos.de>"]
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.14"
env_logger = "0.9"
futures = "0.3.15"
glam = { version = "0.20", features = ["bytemuck"] }
imgui = "0.8"
imgui-winit-support = { version = "0.8", features = ["winit-26"] }
imgui-wgpu = "0.19"
puffin = "0.13"
puffin-imgui = "0.16"
winit = "0.26"
winit_input_helper = "0.11"
wgpu = "0.12"
game-loop = { version = "0.8", features = ["window"] }
bytemuck = { version = "1.4", features = ["derive"] }
