[package]
name = "pathrs"
version = "0.1.0"
edition = "2021"
authors = ["Finn Vos <finn@fvos.de>"]
publish = false

[dependencies]
bytemuck = "1.9"
env_logger = "0.9"
futures = "0.3.15"
game-loop = { version = "0.8", features = ["window"] }
glam = { version = "0.20", features = ["bytemuck"] }
imgui = "0.8"
imgui-winit-support = { version = "0.8", features = ["winit-26"] }
imgui-wgpu = "0.19"
log = "0.4.14"
pathrs-shared = { path = "../pathrs-shared" }
puffin = "0.13"
puffin-imgui = "0.16"
winit = "0.26"
winit_input_helper = "0.11"
wgpu = { version = "0.12", features = ["spirv"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", branch = "main" }
