[package]
name = "pathrs-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.14"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
glam = { version = "0.30.1", features = ["fast-math"] }
libc = "0.2.171"
rand = "0.9.0"
ringbuffer = "0.15.0"
static_assertions = "1.1.0"
triple_buffer = "8.1.0"

tracing = { version = "0.1.41", optional = true }

[features]
default = ["metrics"]
metrics = []
simd = []
tracing = ["dep:tracing"]
