[package]
name = "pathrs-shared"
version = "0.1.0"
edition = "2021"
authors = ["Finn Vos <finn@fvos.de>"]
publish = false

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", branch = "main", features = [
  "glam",
] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bytemuck = { version = "1.9", features = ["derive"] }
glam = { version = "0.20", default-features = false, features = ["bytemuck"] }
